--- a/ChoreBuddies.Frontend/Features/Chores/ChoreForm.razor
+++ b/ChoreBuddies.Frontend/Features/Chores/ChoreForm.razor
@@ -1,35 +1,36 @@
 ﻿@using ChoreBuddies.Frontend.Features.ScheduledChores
 @using ChoreBuddies.Frontend.Utilities
+@using Shared.Chores
 @using Shared.Users
 <MudForm @ref="_form" @bind-IsValid="_isValid">
     <MudStack Spacing="3">
         <div>
             <MudText Class="mb-1" Style="font-weight: 600; font-size: 0.9rem;">Chore Name</MudText>
             <MudTextField Variant="Variant.Outlined"
-            Margin="Margin.Dense"
-            class="rounded-lg bg-white"
-            @bind-Value="Model.Name" ReadOnly="PageMode == PageMode.View" Required="true" />
+                          Margin="Margin.Dense"
+                          class="rounded-lg bg-white"
+                          @bind-Value="Model.Name" ReadOnly="PageMode == PageMode.View" Required="true" />
         </div>
 
         <div>
             <MudText Class="mb-1" Style="font-weight: 600; font-size: 0.9rem;">Description</MudText>
             <MudTextField Variant="Variant.Outlined"
-            Margin="Margin.Dense"
-            class="rounded-lg bg-white" @bind-Value="Model.Description" Lines="3" ReadOnly="PageMode == PageMode.View" />
+                          Margin="Margin.Dense"
+                          class="rounded-lg bg-white" @bind-Value="Model.Description" Lines="3" ReadOnly="PageMode == PageMode.View" />
         </div>
 
         <div>
             <MudText Class="mb-1" Style="font-weight: 600; font-size: 0.9rem;">Room</MudText>
             <MudTextField Variant="Variant.Outlined"
-            Margin="Margin.Dense"
-            class="rounded-lg bg-white" @bind-Value="Model.Room" ReadOnly="PageMode == PageMode.View" Required="true" />
+                          Margin="Margin.Dense"
+                          class="rounded-lg bg-white" @bind-Value="Model.Room" ReadOnly="PageMode == PageMode.View" Required="true" />
         </div>
 
         <div>
             <MudText Class="mb-1" Style="font-weight: 600; font-size: 0.9rem;">Assigned to</MudText>
             <MudSelect T="int?" Variant="Variant.Outlined"
-            Margin="Margin.Dense"
-            class="rounded-lg bg-white" @bind-Value="Model.UserId" ReadOnly="PageMode == PageMode.View" Clearable="true">
+                       Margin="Margin.Dense"
+                       class="rounded-lg bg-white" @bind-Value="Model.UserId" ReadOnly="PageMode == PageMode.View" Clearable="true">
                 @foreach (var user in Users)
                 {
                     <MudSelectItem T="int?" Value="@(user.Id)">@user.UserName</MudSelectItem>
@@ -39,36 +40,38 @@
         <div>
             <MudText Class="mb-1" Style="font-weight: 600; font-size: 0.9rem;">Reward Points</MudText>
             <MudNumericField @bind-Value="Model.RewardPointsCount"
-            Variant="Variant.Outlined"
-            Margin="Margin.Dense"
-            HideSpinButtons="true"
-            ReadOnly="PageMode == PageMode.View"
-            Clearable="true"
-            class="rounded-lg bg-white" />
+                             Variant="Variant.Outlined"
+                             Margin="Margin.Dense"
+                             HideSpinButtons="true"
+                             ReadOnly="PageMode == PageMode.View"
+                             Clearable="true"
+                             class="rounded-lg bg-white" />
         </div>
 
         <MudCheckBox T="bool" @bind-Value="@(Model.IsScheduled)"
-        Label="Is Scheduled"
-        Disabled="PageMode != PageMode.Create" />
+                     Label="Is Scheduled"
+                     Disabled="PageMode != PageMode.Create" />
 
         @if (!Model.IsScheduled)
         {
             <div>
                 <MudText Class="mb-1" Style="font-weight: 600; font-size: 0.9rem;">Due date</MudText>
                 <MudDatePicker Variant="Variant.Outlined"
-                Margin="Margin.Dense"
-                class="rounded-lg bg-white" @bind-Date="Model.DueDate" ReadOnly="PageMode == PageMode.View" />
+                               Margin="Margin.Dense"
+                               class="rounded-lg bg-white" @bind-Date="Model.DueDate" ReadOnly="PageMode == PageMode.View" />
             </div>
         }
 
         <SchedulingFields Model="Model" PageMode="PageMode" />
 
         <div class="d-flex justify-end gap-2 mt-4">
-            @if (PageMode == PageMode.View)
+            @if (PageMode == PageMode.View && status != Status.Completed && status != Status.UnverifiedCompleted)
             {
-                <MudButton OnClick="SwitchToEdit" Variant="Variant.Filled">Edit</MudButton>
-
-                @if(Model.Id is not null && Model.UserId == CurrentUserId)
+                @if (!isChild)
+                {
+                    <MudButton OnClick="SwitchToEdit" Variant="Variant.Filled">Edit</MudButton>
+                }
+                @if (Model.Id is not null && Model.UserId == CurrentUserId)
                 {
                     <MudButton OnClick="MarkChoreAsDone" Color="Color.Primary" Variant="Variant.Filled" Style="text-transform: none;">Mark as done</MudButton>
                 }
@@ -95,6 +98,8 @@
     [Parameter] public bool ShowCancel { get; set; }
     [Parameter] public int CurrentUserId { get; set; }
     [Parameter] public EventCallback OnMarkChoreAsDone { get; set; }
+    [Parameter] public Status status { get; set; }
+    [Parameter] public bool isChild { get; set; }
 
     private MudForm? _form;
     private bool _isValid;
