mark as fulfilled disabled for children

--- a/ChoreBuddies.Frontend/Features/Household/HouseholdManagement.razor
+++ b/ChoreBuddies.Frontend/Features/Household/HouseholdManagement.razor
@@ -145,6 +145,7 @@
 						<MudTd Align="Align.Right">
 							<MudStack Direction="Row" Spacing="1">
 								<MudButton Variant="Variant.Filled"
+										   Disabled="@_currentUserIsChild"
 										   Color="Color.Primary"
 										   Size="Size.Small"
 										   Style="text-transform:none;"
