--- a/ChoreBuddies.Frontend/Features/Chores/ChoreDetailsPage.razor
+++ b/ChoreBuddies.Frontend/Features/Chores/ChoreDetailsPage.razor
@@ -25,21 +25,23 @@
 @if (CurrentMode == PageMode.Create)
 {
     <MudButton Variant="Variant.Outlined"
-               Color="Color.Primary"
-               StartIcon="@Icons.Material.Filled.ContentCopy"
-               OnClick="OpenPredefinedChoreDialog"
-               Class="mb-4"
-               Style="text-transform: none;">
+    Color="Color.Primary"
+    StartIcon="@Icons.Material.Filled.ContentCopy"
+    OnClick="OpenPredefinedChoreDialog"
+    Class="mb-4"
+    Style="text-transform: none;">
         Select from predefined
     </MudButton>
 }
 
 <ChoreForm Model="Model"
-           Users="AvailableUsers"
-           @bind-PageMode="CurrentMode"
-           OnValidSubmit="HandleSave"
-           CurrentUserId="CurrentUserId"
-           OnMarkChoreAsDone="MarkChoreAsDone" />
+Users="AvailableUsers"
+@bind-PageMode="CurrentMode"
+OnValidSubmit="HandleSave"
+CurrentUserId="CurrentUserId"
+OnMarkChoreAsDone="MarkChoreAsDone"
+isChild="IsChild"
+status="ChoreStatus"/>
 
 @code {
     [Parameter] public int? ChoreId { get; set; }
@@ -47,6 +49,7 @@
     private PageMode CurrentMode = PageMode.Create;
     private int CurrentUserId { get; set; }
     private bool IsChild { get; set; }
+    private Status? ChoreStatus { get; set; } = null;
 
     private List<AppUserMinimalDto> AvailableUsers = new();
     protected override async Task OnInitializedAsync()
@@ -75,6 +78,7 @@
             {
                 var dto = await choresService.GetChoreByIdAsync(ChoreId.Value);
                 Model = Mapper.Map<ChoreViewModel>(dto);
+                ChoreStatus = dto?.Status;
             }
         }
         else
