--- a/ChoreBuddies.Frontend/Features/PredefinedChores/SelectPredefinedChores.razor
+++ b/ChoreBuddies.Frontend/Features/PredefinedChores/SelectPredefinedChores.razor
@@ -37,7 +37,7 @@
                                      Variant="Variant.Text"
                                      Color="Color.Default"
                                      Style="@($"color:{groupColorHex}; border-color:{groupColorHex};")">
-                                @chore.name (@chore.rewardPointsCount pkt)
+                                @chore.name (@chore.rewardPointsCount pts)
                             </MudChip>
                         }
                     </MudChipSet>
