--- a/ChoreBuddies.Frontend/Features/PredefinedRewards/SelectPredefinedRewards.razor
+++ b/ChoreBuddies.Frontend/Features/PredefinedRewards/SelectPredefinedRewards.razor
@@ -33,7 +33,7 @@
                                      Variant="Variant.Text"
                                      Color="Color.Default"
                                      Style="@($"color:{groupColorHex}; border-color:{groupColorHex};")">
-                                @reward.Name (@reward.Cost pkt)
+                                @reward.Name (@reward.Cost pts)
                             </MudChip>
                         }
                     </MudChipSet>
