--- a/ChoreBuddies.Frontend/Features/Rewards/RewardShop.razor
+++ b/ChoreBuddies.Frontend/Features/Rewards/RewardShop.razor
@@ -5,6 +5,7 @@
 @using Shared.RedeemedRewards
 @using Shared.Rewards
 
+@inject IAuthService authService
 @inject IRedeemedRewardsService redeemedRewardsService
 @inject IRewardsService rewardsService
 @inject ISnackbar Snackbar
@@ -23,14 +24,17 @@
                 Redeem your hard-earned points for exciting rewards!
             </MudText>
         </MudPaper>
-        <MudButton Variant="Variant.Filled"
-        StartIcon="@Icons.Material.Filled.Add"
-        OnClick="@AddReward"
-        Size="Size.Large"
-        Color="Color.Primary"
-        Style="text-transform:none; border-radius:20px;">
-            Add New Reward
-        </MudButton>
+        @if (!IsChild)
+        {
+            <MudButton Variant="Variant.Filled"
+                       StartIcon="@Icons.Material.Filled.Add"
+                       OnClick="@AddReward"
+                       Size="Size.Large"
+                       Color="Color.Primary"
+                       Style="text-transform:none; border-radius:20px;">
+                Add New Reward
+            </MudButton>
+        }
     </MudStack>
 
     <!-- Points balance -->
@@ -72,19 +76,19 @@
 
                         <MudStack Row="true" Spacing="2" AlignItems="AlignItems.Center">
                             <MudButton Variant="Variant.Outlined"
-                            Color="Color.Primary"
-                            Size="Size.Small"
-                            OnClick="@(() => GoToRewardDetails(reward.Id))"
-                            Style="text-transform:none;">
+                                       Color="Color.Primary"
+                                       Size="Size.Small"
+                                       OnClick="@(() => GoToRewardDetails(reward.Id))"
+                                       Style="text-transform:none;">
                                 View Reward
                             </MudButton>
 
                             <MudButton Variant="Variant.Filled"
-                            Color="Color.Primary"
-                            Size="Size.Small"
-                            Disabled="@(!CanRedeem(reward))"
-                            OnClick="@(() => RedeemReward(reward.Id))"
-                            Style="text-transform:none;">
+                                       Color="Color.Primary"
+                                       Size="Size.Small"
+                                       Disabled="@(!CanRedeem(reward))"
+                                       OnClick="@(() => RedeemReward(reward.Id))"
+                                       Style="text-transform:none;">
                                 Redeem
                             </MudButton>
                         </MudStack>
@@ -111,8 +115,8 @@
             <MudTd DataLabel="Points">@context.PointsSpent</MudTd>
             <MudTd DataLabel="Status">
                 <MudChip T="string" Color="@(context.IsFulfilled ? Color.Success : Color.Warning)"
-                Variant="Variant.Filled"
-                Size="Size.Small">
+                         Variant="Variant.Filled"
+                         Size="Size.Small">
                     @(context.IsFulfilled ? "Fulfilled" : "Pending")
                 </MudChip>
             </MudTd>
@@ -131,12 +135,15 @@
 
     private List<RedeemedRewardDto> RedeemedRewards = [];
 
+    private bool IsChild { get; set; }
+
     // ==== LOGIC ====
     protected override async Task OnInitializedAsync()
     {
         TotalPoints = await userService.GetUsersPointsCountAsync();
-        AvailableRewards = (await rewardsService.GetHouseholdRewardsAsync()).ToList();
+        AvailableRewards = (await rewardsService.GetHouseholdRewardsAsync()).OrderByDescending(r => r.QuantityAvailable).ToList();
         RedeemedRewards = (await redeemedRewardsService.GetUsersRedeemedRewardsAsync()).OrderByDescending(r => r.Id).ToList();
+        IsChild = await authService.IsChildAsync();
     }
 
     private bool CanRedeem(RewardDto reward) => TotalPoints >= reward.Cost && reward.QuantityAvailable > 0;
@@ -148,6 +155,7 @@
         if ((await redeemedRewardsService.RedeemRewardAsync(rewardId)) is not null)
         {
             Snackbar.Add("Redeemed successfully", Severity.Success);
+            TotalPoints = await userService.GetUsersPointsCountAsync();
             RedeemedRewards = (await redeemedRewardsService.GetUsersRedeemedRewardsAsync()).OrderByDescending(r => r.Id).ToList();
             StateHasChanged();
         }
