--- a/ChoreBuddies.Frontend/UI/Layout/MainLayout.razor
+++ b/ChoreBuddies.Frontend/UI/Layout/MainLayout.razor
@@ -16,7 +16,7 @@
         <!-- Layout for authenticated users -->
         <MudLayout>
             <MudAppBar Elevation="2" Color="Color.Surface" Fixed="true">
-                <AppTitleLogo />
+                <AppTitleLogo IsUserAuthenticated="true" />
                 <MudSpacer />
 
                 <!-- Top Navigation Items -->
@@ -133,7 +133,7 @@
         <!-- Layout for non-authenticated users -->
         <MudLayout>
             <MudAppBar Elevation="0" Color="Color.Transparent">
-                <AppTitleLogo />
+                <AppTitleLogo IsUserAuthenticated="false" />
                 <MudSpacer />
                 <div class="d-none d-md-block">
                     <MudButton Class="app-bar" OnClick="@(() => Navigation.NavigateTo("/features"))">Features</MudButton>
@@ -171,8 +171,7 @@
 </AuthorizeView>
 
 @code {
-    private const string AppTitle = "ChoreBuddies"; // TODO make strings file
-
+    private const string AppTitle = "ChoreBuddies"; 
     private bool _drawerOpen = false; 
     private bool _showMiniChat = true;
     private bool _showFullHouseLayout = false;
