--- a/ChoreBuddies.Frontend/Features/Chores/Chores.razor
+++ b/ChoreBuddies.Frontend/Features/Chores/Chores.razor
@@ -1,7 +1,7 @@
 ﻿@page "/chores"
 
 @using ChoreBuddies.Frontend.Features.User
-@using ChoreBuddies.Frontend.UI.Components.Chores
+@using ChoreBuddies.Frontend.Features.Chores.Components
 @using Microsoft.AspNetCore.Components.Authorization
 @using Microsoft.AspNetCore.Components.Web
 @using MudBlazor
@@ -35,7 +35,7 @@
         {
             <MudContainer MaxWidth="MaxWidth.ExtraLarge" Class="pa-4">
 
-                <MudPaper Class="p-6" Elevation="0" Style="width: 100%; max-width: 900px;">
+                <MudPaper Class="p-6 mx-auto" Elevation="0" Style="width: 100%; max-width: 900px;">
 
                     <MudStack Spacing="1">
                         <MudSelect T="int" Variant="Variant.Outlined"
